Make file update

--- a/hangman/Makefile
+++ b/hangman/Makefile
@@ -1,7 +1,7 @@
 all: main
 
-main: essentialfunc.o hangman.o main.o
-	gcc -o main essentialfunc.o hangman.o main.o
+main: essentialfunc.o hangman.o wordlist.o main.o
+	gcc -o main essentialfunc.o hangman.o wordlist.o main.o
 
 essentialfunc.o: essentialfunc.c essentialfunc.h
 	gcc -c essentialfunc.c
@@ -9,7 +9,10 @@ essentialfunc.o: essentialfunc.c essentialfunc.h
 hangman.o: hangman.c hangman.h essentialfunc.h
 	gcc -c hangman.c
 
-main.o: main.c essentialfunc.h hangman.h
+wordlist.o: wordlist.c wordlist.h
+	gcc -c wordlist.c
+
+main.o: main.c essentialfunc.h hangman.h wordlist.h
 	gcc -c main.c
 
 clean:
